--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url = jdbc:mysql://localhost/quote_generator?createDatabaseIfN
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.config.import=secret.properties
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=test
 spring.h2.console.enabled=false
 server.port=8081
@@ -10,14 +10,14 @@ server.port=8081
 
 # Mail Configuration
 spring.mail.host=smtp.gmail.com
-spring.mail.port=465
+spring.mail.port=587
+#spring.mail.port=465
 spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 
 spring.mail.properties.smtp.auth=true
 spring.mail.properties.smtp.starttls.enable=true
-
 spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.username=${EMAIL_USERNAME}
 
@@ -25,4 +25,4 @@ spring.mail.username=${EMAIL_USERNAME}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.writetimeout=1000
-spring.mail.properties.mail.smtp.connectiontimeout=1000
+spring.mail.properties.mail.smtp.connectiontimeout=10000
