Plugin Api for quote and implement the test and the method

--- a/src/main/resources/secret.properties
+++ b/src/main/resources/secret.properties
@@ -3,5 +3,7 @@ spring.datasource.password=Coutinho10@
 #spring.mail.password=gjvigxxizvmthcfx
 #spring.mail.username=dominicrotimi@gmail.com
 
-EMAIL_PASSWORD=gjvigxxizvmthcfx
+
+
+EMAIL_PASSWORD=cagn qyor hblz vzlp
 EMAIL_USERNAME=dominicrotimi@gmail.com
