--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url = jdbc:mysql://localhost/quote_generator?createDatabaseIfN
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.config.import=secret.properties
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.profiles.active=test
 spring.h2.console.enabled=false
 server.port=8081
